# auto-rag-eval

./: .gitmodules  pyproject.toml
auto-rag-eval/Data/Arxiv/: preprocessor.py
auto-rag-eval/Data/Arxiv/KnowledgeCorpus/main/: data_2024062413.json
auto-rag-eval/Data/Arxiv/RawExamData/: Arxiv_QCM_claudev2_2024062414_batch0.json  Arxiv_QCM_claudev2_2024062510_batch0.json  Arxiv_QCM_claudev2_2024062510_batch1.json  Arxiv_QCM_claudev2_2024062510_batch2.json  Arxiv_QCM_claudev2_2024062510_batch3.json  Arxiv_QCM_claudev2_2024062510_batch4.json  Arxiv_QCM_claudev2_2024062510_batch5.json  Arxiv_QCM_claudev2_2024062510_batch6.json  Arxiv_QCM_claudev2_2024062510_batch7.json  Arxiv_QCM_claudev2_2024062510_batch8.json
auto-rag-eval/Data/Arxiv/RetrievalIndex/multi_qa_emb/: data_kilt_embedded.arrow  kilt_dpr_data.faiss
auto-rag-eval/Data/Arxiv/RetrievalIndex/siamese_emb/: data_kilt_embedded.arrow  kilt_dpr_data.faiss
auto-rag-eval/ExamEvaluator/: task_evaluation.sh
auto-rag-eval/ExamEvaluator/ArxivExam/: ArxivExam.yaml
auto-rag-eval/ExamGenerator/: question_generator.py
auto-rag-eval/LLMServer/bedrock/: claude_v2.py
auto-rag-eval/RetrievalSystems/: docs_faiss_index.py  dpr_context_aggregator.py
