[tool.black]
line-length = 100

[tool.isort]
known_first_party = ["llm_automated_exam_evaluation"]

# required for compatibility with black:
profile = "black"

# To maintain consistency with other settings
line_length = 100

[tool.mypy]
# See https://mypy.readthedocs.io/en/latest/config_file.html for more mypy options.

# Enables the type-checker on the interior of functions without type annotations.
check_untyped_defs = true

# Displaying specific error codes makes it easier to silence specific errors
# See also https://mypy.readthedocs.io/en/latest/error_codes.html
show_error_codes = true

# Show source code snippets and location markers in error messages
pretty = true

# Suppresses errors about packages which do not implement type-hint sharing.
# See also https://mypy.readthedocs.io/en/latest/running_mypy.html#missing-imports.
ignore_missing_imports = true

dependencies = [
    "boto3",
    "datasets",
    "matplotlib",
    "nltk",
    "numpy",
    "pandas",
    "plotly",
    "requests",
    "scipy",
    "sentence_transformers",
    "scikit-learn",
    "spacy",
    "torch",
    "tqdm",
    "lm-harness",
]
[tool.poetry]
name = "auto-rag-eval"
version = "0.1.0"
description = ""
authors = ["Kim Minh Thang <thangved02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^2.20.0"
nltk = "^3.8.1"
pydantic = "^2.7.4"
sentence-transformers = "^3.0.1"
boto3 = "1.34.131"
tenacity = "^8.4.1"
faiss-cpu = "^1.8.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
